# fll-rs

./: Cargo.toml  README.md  deploy.sh
.cargo/: config.toml
examples/: minimal.rs  mission_example.rs  simple.rs
fll-rs-core/: Cargo.toml
fll-rs-core/src/: lib.rs  math.rs  profiler.rs  robot.rs  types.rs
fll-rs-core/src/graphics/: display.rs
fll-rs-core/src/movement/: acceleration.rs  controller.rs  pid.rs  spec.rs
fll-rs-lego/: Cargo.toml
fll-rs-lego/src/: graphics_impl.rs  robot_impl.rs
fll-rs-mock/: Cargo.toml
fll-rs-mock/src/: lib.rs
src/: error.rs  graphics.rs  input.rs  lego.rs  lib.rs  math.rs  movement.rs  profiler.rs  robot.rs  types.rs
src/graphics/: menu.rs
src/lego/: graphics_impl.rs  robot.rs  robot_impl.rs
src/movement/: acceleration.rs  controller.rs  motor.rs  pid.rs  spec.rs
tests/: acceleration.rs
