[package]
name = "fll-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
fll-rs-core = { path = "fll-rs-core" }

[target.'cfg(target_arch = "arm")'.dependencies]
fll-rs-lego = { path = "fll-rs-lego" }

[target.'cfg(not(target_arch = "arm"))'.dependencies]
fll-rs-mock = { path = "fll-rs-mock" }

[workspace]
members = [
    "fll-rs-core",
    "fll-rs-lego",
    "fll-rs-mock"
]

default-members = [
    "fll-rs-core",
]
