[package]
name = "fll-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }

image = { version = "0.24", default-features = false }
imageproc = { version = "0.23", default-features = false }
rusttype = "0.9"

ev3dev-lang-rust = { version = "0.12", features = ["screen"] }
