[package]
name = "fll-rs"
version = "0.1.0"
description = "Movement and ui apis for lego ev3 robots intended for use in the FIRST Lego League competition"
edition = "2021"
license = "MIT OR Apache-2.0"

keywords = ["ev3", "ev3dev", "lego", "mindstorms", "fll", "first", "robotics"]
categories = ["science::robotics", "embedded"]

repository = "https://github.com/Eoghanmc22/fll-rs"
documentation = "https://docs.rs/fll-rs"
readme = "README.md"

[dependencies]
anyhow = { version = "1" }

image = { version = "0.24", default-features = false }
imageproc = { version = "0.23", default-features = false }
rusttype = "0.9"

ev3dev-lang-rust = { version = "0.12", features = ["screen"] }

fxhash = "0.2.1"

[dev-dependencies]
rand = "0.8"

[profile.release]
strip = true
