[package]
name = "fll-rs-lego"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
fll-rs = { path = "../fll-rs-core", package = "fll-rs-core" }
image = { version = "0.24", default-features = false }
ev3dev-lang-rust = { version = "0.12", features = ["screen"] }
